# audra

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs  cargo-sources.json  index.html  io.github.amurpo.audra.yml  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-appimage.yml  build-deb.yml  build-fedora.yml  build-flatpak.yml  build-linux.yml  build-macos.yml  build-windows.yml  deploy-pages.yml  nightly.yml  release.yml  test.yml
data/: com.audra.player.desktop  com.audra.player.metainfo.xml  io.github.amurpo.audra.desktop  io.github.amurpo.audra.metainfo.xml  style.css
docs/: BUILD-macos-arm64.md
packaging/: audra.iss  audra.spec  build-deb.sh  build-macos.sh  build-rpm.sh  run-macos.sh  verify-macos-build.sh
po/: es.po
src/: App.tsx  credentials.rs  i18n.rs  index.css  main.rs  scrobbler.rs  settings.rs
src/components/: AppScreenshot.tsx  AudraLanding.tsx  Aurora.tsx  LanguageSwitcher.tsx  Logo.tsx
src/hooks/: useScrollEffects.ts
src/i18n/: index.tsx  translations.ts  types.ts
src/player/: decoder.rs  engine.rs  mod.rs  mpris.rs  replaygain.rs
src/ui/: albums_view.rs  artists_view.rs  cover_picker.rs  dominant_color.rs  icons.rs  image_apply.rs  image_loader.rs  image_utils.rs  lastfm_dialog.rs  library_view.rs  main_window.rs  mod.rs  now_playing.rs  playback.rs  player_bar.rs  reset.rs  settings_menu.rs  theme.rs  track_list.rs  widgets.rs
