[package]
name = "audra"
version = "0.1.7"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
# GUI
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"
gdk-pixbuf = "0.20"

# Audio
rodio = { version = "0.20", features = ["mp3", "flac", "vorbis", "wav"] }

# Metadatos
lofty = "0.22"

# Base de datos
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP / Last.fm
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilidades
md5 = "0.7"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
rand = "0.8"
dirs = "5"

[build-dependencies]
winres = "0.1"