[package]
name = "audra"
version = "0.1.9"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
# GUI
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"
gdk-pixbuf = "0.20"

# Audio
rodio = { version = "0.20", features = ["mp3", "flac", "vorbis", "wav"] }

# Metadata
lofty = "0.22"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP / Last.fm
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internationalization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Utilities
md5 = "0.7"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
rand = "0.8"
dirs = "5"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }

# Windows only: needed to fetch the native HWND for the SMTC media controls.
[target.'cfg(windows)'.dependencies]
gdk4-win32 = "0.9"

[build-dependencies]
winres = "0.1"
