[package]
name = "audra"
version = "0.2.4"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
# GUI
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"
gdk-pixbuf = "0.20"
# Album-art palette extraction (median cut). Same crate Amberol uses for its
# dynamic background; see the attribution in src/ui/theme.rs.
color-thief = "0.2"

# Audio
rodio = { version = "0.20", features = ["mp3", "flac", "vorbis", "wav"] }
# Used directly for a fault-tolerant decoder (rodio's built-in one gives up
# after 3 decode errors, which kills real-world MP3 rips). This is the SAME
# crate rodio already pulls in, so Cargo unifies it to one shared version and
# there's no extra build cost beyond the chosen codecs.
# KEEP IN SYNC WITH RODIO: when bumping rodio, check which symphonia it uses
# (`cargo tree -i symphonia`) and match this version, otherwise Cargo will
# build two symphonias. `cargo tree -d` must show no duplicate symphonia.
symphonia = { version = "0.5", default-features = false, features = ["mp3", "flac", "vorbis", "ogg", "wav", "pcm"] }

# Metadata
lofty = "0.22"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP / Last.fm
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internationalization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Utilities
# Worker-to-GTK-thread notifications (the gtk4-rs replacement for the removed
# glib::MainContext::channel): worker sends, a spawn_future_local drains.
async-channel = "2"
md5 = "0.7"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
rand = "0.8"
dirs = "5"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }

# Windows only: needed to fetch the native HWND for the SMTC media controls.
[target.'cfg(windows)'.dependencies]
gdk4-win32 = "0.9"

# macOS only: the host has no GtkIconTheme with the symbolic icons Audra uses,
# so we bundle Remix SVGs and rasterize them with resvg. Other platforms use
# native themed icons by name (see src/ui/icons.rs) and don't need this.
[target.'cfg(target_os = "macos")'.dependencies]
resvg = "0.44"
usvg = "0.44"

[build-dependencies]
winres = "0.1"
